# thermometer

./: Cargo.toml  README.adoc
src/: _crc8.rs  _main.rs  crc8.rs  error.rs  lib.rs  onewire.rs  scratchpad.rs
