[package]
name = "thermometer"
version = "0.1.0"
authors = ["kgv <kgv@users.noreply.github.com>"]
edition = "2024"
resolver = "2"

[dependencies]
log = "0.4.26"
esp-idf-svc = { version = "0.51.0", features = [
    "critical-section",
    "embassy-sync",
    "embassy-time-driver",
] }
thiserror = "2.0.12"

[build-dependencies]
embuild = "0.33.0"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "onewire_bus", version = "^1.0.2" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
